--- a/package.json
+++ b/package.json
@@ -9,27 +9,45 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.18",
+    "@nextui-org/react": "^2.0.1",
     "@types/node": "20.4.5",
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
+    "class-variance-authority": "^0.7.0",
+    "cloudinary": "^1.40.0",
+    "clsx": "^2.0.0",
+    "datauri": "^4.1.0",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
+    "framer-motion": "^10.15.0",
+    "install": "^0.13.0",
+    "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.1",
+    "lucide-react": "^0.268.0",
     "mongoose": "^7.4.1",
+    "multer": "^1.4.5-lts.1",
     "next": "13.4.12",
+    "next-cookies": "^2.0.3",
     "nodemailer": "^6.9.4",
+    "npm": "^9.8.1",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.10.1",
+    "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
+    "tailwindcss-animate": "^1.0.6",
     "typescript": "5.1.6"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
-    "@types/jsonwebtoken": "^9.0.2"
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/multer": "^1.4.7"
   }
 }
